# Identification-of-robotic-arm

./: .gitignore  README.md  count_lines.sh  env.sh  pyproject.toml  run.sh
.marscode/: deviceInfo.json
assets/robot_model/AM-D02-AemLURDF0413/: CMakeLists.txt  package.xml
assets/robot_model/AM-D02-AemLURDF0413/config/: joint_names_AM-D02-AemLURDF0413.yaml
assets/robot_model/AM-D02-AemLURDF0413/launch/: display.launch  gazebo.launch
assets/robot_model/AM-D02-AemLURDF0413/meshes/: ArmLfifth_Link.STL  ArmLfourth_Link.STL  ArmLsecond_Link.STL  ArmLseventh_Link.STL  ArmLsixth_Link.STL  ArmLsixthoutput_Link.STL  ArmLthird_Link.STL  base_link.STL
assets/robot_model/AM-D02-AemLURDF0413/urdf/: AM-D02-AemLURDF0413.urdf
src/robot_control/: __init__.py  config.py
src/robot_control/control/: controller.py  pipeline.py  types.py
src/robot_control/dynamics/: gravity.py  pinocchio.py
src/robot_control/hardware/usb2fdcan/: __init__.py  config.py  constants.py  feedback.py  protocol.py  socket_transport.py  (+2 more)
src/robot_control/param_id/: diagnostics.py  excitation.py  identification.py  preprocessing.py  regressor.py  reporting.py  sim_main.py  trajectory.py  types.py
src/robot_control/shared/: state.py  transforms.py
tests/: test_architecture_modules.py  test_mode_entrypoints.py  test_mujoco_ghost.py  test_mujoco_viewer.py  test_param_id_excitation.py  test_param_id_identification.py  test_param_id_real.py  test_real_can_control.py  test_rerun_spatial.py  test_rerun_viz.py  test_runtime_feedback_state.py  test_sim_main_pd.py  test_sim_timing.py  test_usb2fdcan_send.py
(+31 files in other folders)
