[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-control"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.0.0",
    "numpy>=1.20.0",
    "scipy>=1.10.0",
    "rerun-sdk>=0.18.0",
    "pyserial",
    "plotly>=5.20",
    "jinja2>=3.1",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
